first ballerina service, fixed the overflowing footer

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,7 @@ header{
   padding: 30px 20px;
   margin-bottom: 8px;
   border-radius: 10px;
+  
 }
 
 header h1 {
@@ -66,9 +67,17 @@ header p {
   flex: 1;
 }
 
+.diiiiv{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #footer{
-  position: relative;
-  left: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 .dark-mode{
